# zsel-orchestrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: build-axe-runner.yml  build-push.yml
axe-runner/: Dockerfile  package.json  runner.mjs
src/: __init__.py  cli.py  config.py  health.py  ingest.py  llm.py  main.py  orchestrator.py
src/agents/: __init__.py
src/knowledge/: __init__.py
src/tools/: __init__.py
tests/: test_agents.py  test_config.py  test_health.py  test_tools.py
