[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["zsel_orchestrator", "zsel_orchestrator.agents", "zsel_orchestrator.knowledge", "zsel_orchestrator.tools"]

[tool.setuptools.package-dir]
"zsel_orchestrator" = "src"

[project]
name = "zsel-orchestrator"
version = "0.2.0"
description = "ZSEL AI Company — autonomous multi-agent orchestrator with RAG knowledge base and self-improvement loop"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "qdrant-client>=1.12.0",
    "redis>=5.0",
    "websockets>=13.0",
    "structlog>=24.0",
    "typer>=0.12.0",
    "rich>=13.0",
]

[project.scripts]
orchestrator = "zsel_orchestrator.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
